xidlc/tests/snapshots/codegen_snapshot__axum__http_bidi_stream.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_bidi_stream.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[allow(
    non_snake_case,
    unused_attributes,
    unused_variables,
    unused_mut,
    unreachable_code,
    clippy::let_unit_value
)]
#[async_trait::async_trait]
pub trait HttpBidiStreamService {
    async fn chat(
        &self,
        req: ::xidl_rust_axum::Request<
            xidl_rust_axum::stream::BidiServerStream<
                HttpBidiStreamServiceChatRequest,
                HttpBidiStreamServiceChatResponse,
            >,
        >,
    ) -> ::xidl_rust_axum::Result<()>;
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_in_HttpBidiStreamService {
    use super::*;
}
#[allow(non_snake_case, non_camel_case_types, non_upper_case_globals, unused_imports)]
pub(super) mod __xidl_out_HttpBidiStreamService {
    use super::*;
}
#[derive(::serde::Serialize)]
pub struct HttpBidiStreamServiceChatRequestOutBody {
    #[serde(default)]
    pub room: String,
    #[serde(default)]
    pub text: String,
}
#[derive(::serde::Deserialize)]
pub struct HttpBidiStreamServiceChatRequestInBody {
    pub room: String,
    pub text: String,
}
#[derive(::serde::Serialize, ::serde::Deserialize)]
pub struct HttpBidiStreamServiceChatRequest {
    pub room: String,
    pub text: String,
}
#[derive(::serde::Serialize)]
pub struct HttpBidiStreamServiceChatResponseOutBody {
    pub from: String,
    pub reply: String,
}
#[derive(::serde::Deserialize)]
pub struct HttpBidiStreamServiceChatResponseInBody {
    pub from: String,
    pub reply: String,
}
#[derive(::serde::Serialize, ::serde::Deserialize)]
pub struct HttpBidiStreamServiceChatResponse {
    pub from: String,
    pub reply: String,
}
#[allow(clippy::useless_conversion, unreachable_code, unused_variables)]
impl From<HttpBidiStreamServiceChatResponse>
for HttpBidiStreamServiceChatResponseOutBody {
    fn from(value: HttpBidiStreamServiceChatResponse) -> Self {
        Self {
            from: value.from,
            reply: value.reply,
        }
    }
}
#[allow(clippy::useless_conversion, unreachable_code, unused_variables)]
impl From<HttpBidiStreamServiceChatResponseInBody>
for HttpBidiStreamServiceChatResponse {
    fn from(value: HttpBidiStreamServiceChatResponseInBody) -> Self {
        Self {
            from: value.from,
            reply: value.reply,
        }
    }
}
pub struct HttpBidiStreamServiceServer<T> {
    inner: ::std::sync::Arc<T>,
}
#[allow(non_snake_case)]
impl<T> HttpBidiStreamServiceServer<T>
where
    T: HttpBidiStreamService + Send + Sync + 'static,
{
    pub fn new(inner: T) -> Self {
        Self {
            inner: ::std::sync::Arc::new(inner),
        }
    }
    pub fn from_arc(inner: ::std::sync::Arc<T>) -> Self {
        Self { inner }
    }
    pub fn router(self) -> xidl_rust_axum::axum::Router {
        let _svc = self.inner;
        xidl_rust_axum::axum::Router::new()
            .route("/chat", xidl_rust_axum::axum::routing::get(Self::chat))
            .with_state(_svc)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn chat(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
        ws: ::xidl_rust_axum::axum::extract::ws::WebSocketUpgrade,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        let req_headers = headers.clone();
        let svc = svc.clone();
        let mut resp = ws
            .on_upgrade(move |socket| async move {
                let bidi = xidl_rust_axum::stream::open_bidi_server::<
                    HttpBidiStreamServiceChatRequest,
                    HttpBidiStreamServiceChatResponse,
                >(socket);
                let error_sender = bidi.error_sender();
                let req = ::xidl_rust_axum::Request::new(req_headers, bidi);
                if let Err(err) = svc.chat(req).await {
                    if let Some(tx) = error_sender {
                        let _ = tx.send(Err(err)).await;
                    }
                }
            });
        return Ok(resp);
    }
}
impl<T> xidl_rust_axum::Service for HttpBidiStreamServiceServer<T>
where
    T: HttpBidiStreamService + Send + Sync + 'static,
{
    fn into_router(self) -> xidl_rust_axum::axum::Router {
        self.router()
    }
}
pub struct HttpBidiStreamServiceClient {
    client: ::xidl_rust_axum::Client,
}
#[allow(non_snake_case)]
impl HttpBidiStreamServiceClient {
    /// service: dev server
    pub fn new_dev_server() -> Self {
        Self::new("http://127.0.0.1:8080")
    }
    pub fn new(base_url: impl Into<String>) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::new(base_url),
        }
    }
    pub fn with_http(
        base_url: impl Into<String>,
        http: ::xidl_rust_axum::reqwest::Client,
    ) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::with_http(base_url, http),
        }
    }
}
#[allow(non_snake_case)]
impl HttpBidiStreamServiceClient {
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn chat(
        &self,
        room: String,
        text: String,
    ) -> Result<
        xidl_rust_axum::stream::ReaderWriter<
            HttpBidiStreamServiceChatRequest,
            HttpBidiStreamServiceChatResponse,
        >,
        xidl_rust_axum::Error,
    > {
        let xidl_path = "/chat".to_string();
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::GET, self.client.url(&xidl_path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str(
                        "application/x-ndjson",
                    )
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let auth_target = &self.client;
        let _ = auth_target;
        let mut ws_url = self.client.ws_url(&xidl_path)?;
        return xidl_rust_axum::stream::open_bidi_client::<
            HttpBidiStreamServiceChatRequest,
            HttpBidiStreamServiceChatResponse,
        >(&ws_url)
            .await;
    }
}
