xidlc/tests/snapshots/codegen_snapshot__axum__http_catch_all.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
http_catch_all.rs
===============
// Code generated by xidlc-v0.0.1-snapshot. DO NOT EDIT.

#[allow(
    non_snake_case,
    unused_attributes,
    unused_variables,
    unused_mut,
    unreachable_code,
    clippy::let_unit_value
)]
#[async_trait::async_trait]
pub trait HttpCatchAllService {
    async fn read_file(&self, rel_path: String) -> ::xidl_rust_axum::Result<String>;
    async fn read_asset(
        &self,
        key: String,
        version: String,
    ) -> ::xidl_rust_axum::Result<String>;
}
#[allow(non_snake_case, unused_imports)]
pub(super) mod __xidl_in_HttpCatchAllService {
    use super::*;
}
#[allow(non_snake_case, unused_imports)]
pub(super) mod __xidl_out_HttpCatchAllService {
    use super::*;
}
#[derive(::serde::Deserialize)]
pub struct HttpCatchAllServiceReadFilePath {
    #[serde(rename = "path")]
    pub rel_path: String,
}
#[derive(::serde::Deserialize)]
struct HttpCatchAllServiceReadFileRequest {
    rel_path: String,
}
#[allow(clippy::manual_async_fn, unused_mut)]
impl<S> ::xidl_rust_axum::axum::extract::FromRequest<S>
for HttpCatchAllServiceReadFileRequest
where
    S: Send + Sync,
{
    type Rejection = ::xidl_rust_axum::Error;
    fn from_request(
        req: ::xidl_rust_axum::axum::extract::Request,
        state: &S,
    ) -> impl ::core::future::Future<Output = Result<Self, Self::Rejection>> + Send {
        async move {
            let (mut parts, body) = req.into_parts();
            let _ = &body;
            let _ = state;
            let ::xidl_rust_axum::axum::extract::Path(xidl_path) = <::xidl_rust_axum::axum::extract::Path<
                HttpCatchAllServiceReadFilePath,
            > as ::xidl_rust_axum::axum::extract::FromRequestParts<
                S,
            >>::from_request_parts(&mut parts, state)
                .await
                .map_err(|err| ::xidl_rust_axum::Error::new(400, err.to_string()))?;
            let HttpCatchAllServiceReadFilePath { rel_path } = xidl_path;
            let xidl_headers = &parts.headers;
            let _ = xidl_headers;
            Ok(Self { rel_path })
        }
    }
}
#[derive(::serde::Deserialize)]
pub struct HttpCatchAllServiceReadAssetPath {
    pub key: String,
}
#[derive(::serde::Serialize, ::core::default::Default)]
struct HttpCatchAllServiceReadAssetRequestOutQuery {
    #[serde(rename = "v")]
    #[serde(default)]
    version: String,
}
#[derive(::serde::Deserialize, ::core::default::Default)]
struct HttpCatchAllServiceReadAssetRequestInQuery {
    #[serde(rename = "v")]
    #[serde(default)]
    version: String,
}
#[derive(::serde::Deserialize)]
struct HttpCatchAllServiceReadAssetRequest {
    key: String,
    version: String,
}
#[allow(clippy::manual_async_fn, unused_mut)]
impl<S> ::xidl_rust_axum::axum::extract::FromRequest<S>
for HttpCatchAllServiceReadAssetRequest
where
    S: Send + Sync,
{
    type Rejection = ::xidl_rust_axum::Error;
    fn from_request(
        req: ::xidl_rust_axum::axum::extract::Request,
        state: &S,
    ) -> impl ::core::future::Future<Output = Result<Self, Self::Rejection>> + Send {
        async move {
            let (mut parts, body) = req.into_parts();
            let _ = &body;
            let _ = state;
            let ::xidl_rust_axum::axum::extract::Path(xidl_path) = <::xidl_rust_axum::axum::extract::Path<
                HttpCatchAllServiceReadAssetPath,
            > as ::xidl_rust_axum::axum::extract::FromRequestParts<
                S,
            >>::from_request_parts(&mut parts, state)
                .await
                .map_err(|err| ::xidl_rust_axum::Error::new(400, err.to_string()))?;
            let HttpCatchAllServiceReadAssetPath { key } = xidl_path;
            let ::xidl_rust_axum::axum::extract::Query(xidl_query) = <::xidl_rust_axum::axum::extract::Query<
                HttpCatchAllServiceReadAssetRequestInQuery,
            > as ::xidl_rust_axum::axum::extract::FromRequestParts<
                S,
            >>::from_request_parts(&mut parts, state)
                .await
                .map_err(|err| ::xidl_rust_axum::Error::new(400, err.to_string()))?;
            let HttpCatchAllServiceReadAssetRequestInQuery { version } = xidl_query;
            let xidl_headers = &parts.headers;
            let _ = xidl_headers;
            Ok(Self { key, version })
        }
    }
}
pub struct HttpCatchAllServiceServer<T> {
    inner: ::std::sync::Arc<T>,
}
#[allow(non_snake_case)]
impl<T> HttpCatchAllServiceServer<T>
where
    T: HttpCatchAllService + Send + Sync + 'static,
{
    pub fn new(inner: T) -> Self {
        Self {
            inner: ::std::sync::Arc::new(inner),
        }
    }
    pub fn from_arc(inner: ::std::sync::Arc<T>) -> Self {
        Self { inner }
    }
    pub fn router(self) -> xidl_rust_axum::axum::Router {
        let _svc = self.inner;
        xidl_rust_axum::axum::Router::new()
            .route("/files/{*path}", xidl_rust_axum::axum::routing::get(Self::read_file))
            .route(
                "/assets/{*key}",
                xidl_rust_axum::axum::routing::get(Self::read_asset),
            )
            .with_state(_svc)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn read_file(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
        request: HttpCatchAllServiceReadFileRequest,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "text/plain") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let HttpCatchAllServiceReadFileRequest { rel_path } = request;
        let rel_path: String = rel_path;
        let mut resp = match svc.read_file(rel_path).await {
            Ok(resp_value) => {
                let mut resp = {
                    let body_value: String = resp_value;
                    let _ = &body_value;
                    let body = xidl_rust_axum::SerializeFactory::new("text/plain")
                        .to_vec(&body_value)?;
                    ::xidl_rust_axum::axum::response::Response::builder()
                        .status(
                            ::xidl_rust_axum::axum::http::StatusCode::from_u16(200)
                                .unwrap(),
                        )
                        .header(
                            ::xidl_rust_axum::axum::http::header::CONTENT_TYPE,
                            "text/plain",
                        )
                        .body(::xidl_rust_axum::axum::body::Body::from(body))
                        .map_err(|err| xidl_rust_axum::Error::new(
                            500,
                            format!("{err:?}"),
                        ))?
                };
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
    #[allow(
        clippy::let_and_return,
        clippy::needless_return,
        clippy::useless_conversion,
        unused_mut,
        unreachable_code,
        clippy::let_unit_value,
        unused_variables
    )]
    async fn read_asset(
        ::xidl_rust_axum::axum::extract::State(
            svc,
        ): ::xidl_rust_axum::axum::extract::State<::std::sync::Arc<T>>,
        headers: ::xidl_rust_axum::axum::http::HeaderMap,
        uri: ::xidl_rust_axum::axum::http::Uri,
        request: HttpCatchAllServiceReadAssetRequest,
    ) -> ::xidl_rust_axum::Result<::xidl_rust_axum::axum::response::Response> {
        let _ = &headers;
        if !xidl_rust_axum::http::accepts_media_type(&headers, "text/plain") {
            return Err(xidl_rust_axum::Error::not_acceptable());
        }
        let HttpCatchAllServiceReadAssetRequest { key, version } = request;
        let key: String = key;
        let version: String = version;
        let mut resp = match svc.read_asset(key, version).await {
            Ok(resp_value) => {
                let mut resp = {
                    let body_value: String = resp_value;
                    let _ = &body_value;
                    let body = xidl_rust_axum::SerializeFactory::new("text/plain")
                        .to_vec(&body_value)?;
                    ::xidl_rust_axum::axum::response::Response::builder()
                        .status(
                            ::xidl_rust_axum::axum::http::StatusCode::from_u16(200)
                                .unwrap(),
                        )
                        .header(
                            ::xidl_rust_axum::axum::http::header::CONTENT_TYPE,
                            "text/plain",
                        )
                        .body(::xidl_rust_axum::axum::body::Body::from(body))
                        .map_err(|err| xidl_rust_axum::Error::new(
                            500,
                            format!("{err:?}"),
                        ))?
                };
                resp
            }
            Err(err) => {
                ::xidl_rust_axum::axum::response::IntoResponse::into_response(err)
            }
        };
        Ok(resp)
    }
}
impl<T> xidl_rust_axum::Service for HttpCatchAllServiceServer<T>
where
    T: HttpCatchAllService + Send + Sync + 'static,
{
    fn into_router(self) -> xidl_rust_axum::axum::Router {
        self.router()
    }
}
pub struct HttpCatchAllServiceClient {
    client: ::xidl_rust_axum::Client,
}
#[allow(non_snake_case)]
impl HttpCatchAllServiceClient {
    pub fn new(base_url: impl Into<String>) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::new(base_url),
        }
    }
    pub fn with_http(
        base_url: impl Into<String>,
        http: ::xidl_rust_axum::reqwest::Client,
    ) -> Self {
        Self {
            client: ::xidl_rust_axum::Client::with_http(base_url, http),
        }
    }
}
#[allow(non_snake_case)]
impl HttpCatchAllServiceClient {
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn read_file(
        &self,
        rel_path: String,
    ) -> Result<String, xidl_rust_axum::Error> {
        let path = "/files/{*path}".to_string();
        let path = path.replace("{*path}", &rel_path.to_string());
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::GET, self.client.url(&path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str("text/plain")
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let auth_target = &self.client;
        let _ = auth_target;
        let resp = self
            .client
            .http()
            .execute(req)
            .await
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        if resp.status().is_success() {
            let body = resp
                .bytes()
                .await
                .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
            let body: String = xidl_rust_axum::DeserializeFactory::new("text/plain")
                .from_slice(&body)?;
            Ok(body)
        } else {
            let status = resp.status();
            let body = resp.json::<xidl_rust_axum::ErrorBody>().await.ok();
            Err(xidl_rust_axum::Error::from_http_response(status, body))
        }
    }
    #[allow(clippy::useless_conversion, unused_mut, unreachable_code, unused_variables)]
    pub async fn read_asset(
        &self,
        key: String,
        version: String,
    ) -> Result<String, xidl_rust_axum::Error> {
        let path = "/assets/{*key}".to_string();
        let path = path.replace("{*key}", &key.to_string());
        let mut req = self
            .client
            .http()
            .request(xidl_rust_axum::reqwest::Method::GET, self.client.url(&path))
            .build()
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        req.headers_mut()
            .insert(
                xidl_rust_axum::reqwest::header::ACCEPT,
                xidl_rust_axum::reqwest::header::HeaderValue::from_str("text/plain")
                    .map_err(|err| xidl_rust_axum::Error::new(400, format!("{err:?}")))?,
            );
        let query = HttpCatchAllServiceReadAssetRequestOutQuery {
            version,
        };
        let query = xidl_rust_axum::serde_urlencoded::to_string(&query)
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        if !query.is_empty() {
            req.url_mut().set_query(Some(&query));
        }
        let auth_target = &self.client;
        let _ = auth_target;
        let resp = self
            .client
            .http()
            .execute(req)
            .await
            .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
        if resp.status().is_success() {
            let body = resp
                .bytes()
                .await
                .map_err(|err| xidl_rust_axum::Error::new(500, format!("{err:?}")))?;
            let body: String = xidl_rust_axum::DeserializeFactory::new("text/plain")
                .from_slice(&body)?;
            Ok(body)
        } else {
            let status = resp.status();
            let body = resp.json::<xidl_rust_axum::ErrorBody>().await.ok();
            Err(xidl_rust_axum::Error::from_http_response(status, body))
        }
    }
}
